Responsivo com toggle

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
 
     
     
-    <title>Formulário - ManejeBem</title>
+    <title>Consultar CEP - ManejeBem</title>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
